2.5.0 beta2
==================

- Restructured lifecycle concerns - introduced ICommissionConcern and IDecommissionConcern and favors them over old enum driven style.

- Fixed how contextual arguments are handled. Null is no longer considered a valid value (That would cause an exception later on, now it's ignored).

- Changed method DeferredStart on StartableFacility. It now does not take a bool parameter. A DeferredTryStart() method was introduced instead.

2.5.0 beta1 (2010-07-05)
==================
- Typed Factories will not implicitly pick default ITypedFactoryComponentSelector registered in the container anymore

- Obsoleted all the AddComponent* methods in favor of using Installers and fluent registration API

- ServiceSelector delegate (used in WithService.Select calls) changed signature to fix a bug: http://3.ly/eP5Q

- moved IWindsorInstaller to Castle.MicroKernel.Registration namespace

- typed factories will now obey container release policy, that is if the container does not track the component, so won't the factory.

- added helper methods to fluently configure logging facility using: container.AddFacility<LoggingFacility>( f = > f.Fluent().Magic().Here() );

- added overload for UsingFactoryMethod which exposees ComponentModel of component to the factory

- added generic overloads for ITypeConverter.PerformConversion to reduce casting.

- it is now possible to call WithService.Foo().WithService.Bar() and both services will be used. Also more methods were added: WithService.Self() and WithService.AllInterfaces()

- added simple debugger visualizer to help diagnosing misconfigured components.

- added optimized mode to StartableFacility for Single-call-to-Install scenario that won't start anything before the end of Install (at which point the container is assumed to be completely configured and all components should be there) and it will throw if it can't resolve and start the component.

- added OptimizeDependencyResolution around calls to Install
